--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="site-title">Dorivan Almeida</h1>
     <h3 class="site-subtitle">Jr. Web Developer </h3>
     <hr>
-    <h2> Página em desenvolvimento </h2>    
+    <h2 class="desenvolvimento"> Página em desenvolvimento </h2>    
 </header>
 </body>
 </html>
